--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules/
 /dist/
-/src/components/firebaseConfig.js
+firebaseConfig.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
